# swing-hello

./: .cookiecutter.json  .pre-commit-config.yaml  .pypirc  .travis.yml  404.html  CITATION.cff  MANIFEST.in  Makefile  NOTICE  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: publish.yml
demo/: README.md  manage.py
demo/demo/: __init__.py  settings.py  urls.py  wsgi.py
docs/: index.md
quick_start/: index.html
search/: search_index.json
src/swing-hello/: README.md  apps.py  urls.py
src/swing-hello/templates/: hello.html
src/swing-hello/views/: __init__.py  view_hello_response.py  view_hello_template.py
src/swing_hello/: README.md  __init__.py  __main__.py  apps.py  urls.py
src/swing_hello/forms/: __init__.py  form_hello.py
src/swing_hello/templates/: hello.html
src/swing_hello/templates/swing_hello/: hello_form.html
src/swing_hello/tests/: __init__.py  test_view_hello_form.py  test_view_hello_json.py  test_view_hello_response.py  test_view_hello_template.py  test_views.py  tests.py
src/swing_hello/views/: __init__.py  view_hello_form.py  view_hello_json.py  view_hello_response.py  view_hello_template.py
