# -*- coding: utf-8 -*-


# =============================================================================
# Project Configuration
# =============================================================================

[tool.poetry]
name = "swing_hello"
version = "0.1.0"
description = "A Django plugin that provides basic views for response handling and template rendering."
authors = ["Scape Agency <info@scapeagency.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scape-agency/swing-hello"
repository = "https://github.com/scape-agency/swing-hello"
documentation = "https://swing-hello.readthedocs.io"
keywords = ["Django", "plugin", "views", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


# =============================================================================
# Dependencies
# =============================================================================

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"


# =============================================================================
# Development Dependencies
# =============================================================================

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-django = "^4.5.2"
pytest-cov = "^5.0.0" # Code coverage for tests
black = "^24.8.0" # Code formatter
flake8 = "^7.1.0" # Linter for code quality
mypy = "^1.11.1" # Static type checker
sphinx = "^8.0.2" # Documentation generator
isort = "^5.10.1"
tox = "^4.4.6" # Testing multiple environments


# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# =============================================================================
# Scripts
# =============================================================================

[tool.poetry.scripts]
swing_hello = 'swing_hello:main'


# =============================================================================
# Plugins
# =============================================================================

[tool.poetry.plugins."django.apps"]
"swing_hello" = "swing_hello.apps.HelloConfig"
