[metadata]
name = "django-polls"
version = "0.1.0"
description = "A Django app to conduct web-based polls."
long_description = "file: README.rst"
long_description_content_type = "text/x-rst"
url = "https://www.example.com/"
author = "Your Name"
author_email = "yourname@example.com"
license = "BSD-3-Clause"
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2  # Replace "4.2" with the Django version you are targeting
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = ">=3.10"
install_requires =
    Django >= 4.2  # Replace "4.2" with the minimum Django version your app supports

[options.extras_require]
dev =
    pytest
    pytest-django
    black
    flake8
    mypy
    sphinx
    tox
docs =
    sphinx
    sphinx-rtd-theme

[options.package_data]
# Include any non-Python files needed by the package
* = *.html, *.css, *.js, *.png, *.jpg, *.gif, *.txt

[options.entry_points]
# Define any console scripts or other entry points if applicable
console_scripts =
    django-polls-manage = django_polls.manage:main

[project.urls]
Bug Tracker = "https://github.com/yourusername/django-polls/issues"
Documentation = "https://django-polls.readthedocs.io"
Source Code = "https://github.com/yourusername/django-polls"